--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,7 @@
 {
-    "globals": { },
+    "globals": {
+        "log": true
+    },
     "node": true,
     "regexdash": true,
     "browser": true,
