--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/erykpiast/cyclejs-examples",
   "dependencies": {
     "bem-class": "^0.4.4",
+    "bem-cn": "^1.0.0",
     "core-js": "^0.9.11",
     "cyclejs": "^0.22.0",
     "cyclejs-group": "^0.5.0",
@@ -33,7 +34,6 @@
     "brfs": "~1.4",
     "browserify": "~10.0",
     "chai": "~2.3",
-    "cyclejs": "~0.21",
     "extend": "~2.0",
     "glob": "~5.0",
     "gulp": "~3.8",
@@ -44,6 +44,7 @@
     "gulp-copy": "~0.0",
     "gulp-jshint": "~1.10",
     "gulp-karma": "~0.0",
+    "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "~1.5",
     "gulp-util": "~3.0",
     "jshint-stylish": "~1.0",
