--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cyclejs": "^0.22.0",
     "cyclejs-group": "^0.5.0",
     "cyclejs-stream": "^0.3.2",
+    "dedent": "^0.4.0",
     "ramda": "~0.14",
     "uuid": "^2.0.1"
   },
